plugins/wasm-go/extensions/waf-deny/wasmplugin/go_rules/rule_941/experiment.go

//line experiment.rl:1
package rule_941

import (
    "fmt"
    "strings"
    "golang.org/x/exp/slices"
)

type Machine struct {

}

type XssChecker struct {

}

var riskTags = []string {
    "script", "style", "svg", "set", "form", "marquee", "meta", "link", "object", "embed", "applet", "audio", "animate",
    "param", "iframe", "frame", "base", "body", "bindings", "image", "img", "video", "importimplementation",
}

var riskAttrs = []string{
	"background", "formaction", "lowsrc", "ping", "src", "style",
}

func isRiskAttr(attr string) bool {
    if slices.Contains(riskAttrs, attr) {
        return true
    }

    if strings.HasPrefix(attr, "on") {
        return true
    }

    return false
}

func matchExp(data []byte) bool {

//line experiment.rl:40

//line experiment.go:45
const xss_start int = 0
const xss_first_final int = 155
const xss_error int = -1

const xss_en_main int = 0


//line experiment.rl:41
    cs, p, pe, eof := 0, 0, len(data), len(data)
        _ = eof
    pbt, pba := 0, 0
    maybeTag := false
    var tagNameBuilder strings.Builder
    var tagName string

    maybeAttr := false
    var attrName string

    
//line experiment.go:65
	{
	cs = xss_start
	}

//line experiment.go:70
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 155:
		goto st_case_155
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 156:
		goto st_case_156
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 72:
		goto st_case_72
	case 73:
		goto st_case_73
	case 74:
		goto st_case_74
	case 75:
		goto st_case_75
	case 76:
		goto st_case_76
	case 77:
		goto st_case_77
	case 78:
		goto st_case_78
	case 79:
		goto st_case_79
	case 80:
		goto st_case_80
	case 81:
		goto st_case_81
	case 82:
		goto st_case_82
	case 83:
		goto st_case_83
	case 84:
		goto st_case_84
	case 85:
		goto st_case_85
	case 157:
		goto st_case_157
	case 86:
		goto st_case_86
	case 87:
		goto st_case_87
	case 88:
		goto st_case_88
	case 89:
		goto st_case_89
	case 90:
		goto st_case_90
	case 91:
		goto st_case_91
	case 92:
		goto st_case_92
	case 93:
		goto st_case_93
	case 94:
		goto st_case_94
	case 95:
		goto st_case_95
	case 96:
		goto st_case_96
	case 97:
		goto st_case_97
	case 98:
		goto st_case_98
	case 99:
		goto st_case_99
	case 100:
		goto st_case_100
	case 101:
		goto st_case_101
	case 102:
		goto st_case_102
	case 103:
		goto st_case_103
	case 104:
		goto st_case_104
	case 105:
		goto st_case_105
	case 106:
		goto st_case_106
	case 107:
		goto st_case_107
	case 108:
		goto st_case_108
	case 109:
		goto st_case_109
	case 110:
		goto st_case_110
	case 111:
		goto st_case_111
	case 112:
		goto st_case_112
	case 113:
		goto st_case_113
	case 114:
		goto st_case_114
	case 115:
		goto st_case_115
	case 158:
		goto st_case_158
	case 116:
		goto st_case_116
	case 117:
		goto st_case_117
	case 118:
		goto st_case_118
	case 119:
		goto st_case_119
	case 120:
		goto st_case_120
	case 121:
		goto st_case_121
	case 122:
		goto st_case_122
	case 123:
		goto st_case_123
	case 124:
		goto st_case_124
	case 125:
		goto st_case_125
	case 126:
		goto st_case_126
	case 127:
		goto st_case_127
	case 128:
		goto st_case_128
	case 129:
		goto st_case_129
	case 130:
		goto st_case_130
	case 131:
		goto st_case_131
	case 132:
		goto st_case_132
	case 133:
		goto st_case_133
	case 134:
		goto st_case_134
	case 135:
		goto st_case_135
	case 136:
		goto st_case_136
	case 137:
		goto st_case_137
	case 138:
		goto st_case_138
	case 139:
		goto st_case_139
	case 140:
		goto st_case_140
	case 141:
		goto st_case_141
	case 142:
		goto st_case_142
	case 143:
		goto st_case_143
	case 144:
		goto st_case_144
	case 145:
		goto st_case_145
	case 146:
		goto st_case_146
	case 147:
		goto st_case_147
	case 148:
		goto st_case_148
	case 149:
		goto st_case_149
	case 150:
		goto st_case_150
	case 151:
		goto st_case_151
	case 159:
		goto st_case_159
	case 152:
		goto st_case_152
	case 153:
		goto st_case_153
	case 154:
		goto st_case_154
	}
	goto st_out
	st0:
		if p++; p == pe {
			goto _test_eof0
		}
	st_case_0:
		switch data[p] {
		case 34:
			goto st1
		case 39:
			goto st1
		case 60:
			goto st144
		}
		goto st0
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 32:
			goto st1
		case 34:
			goto st1
		case 39:
			goto st1
		case 47:
			goto st1
		case 60:
			goto st3
		}
		switch {
		case data[p] < 65:
			if 9 <= data[p] && data[p] <= 13 {
				goto st1
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr5
			}
		default:
			goto tr5
		}
		goto st2
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 32:
			goto st1
		case 34:
			goto st1
		case 39:
			goto st1
		case 47:
			goto st1
		case 60:
			goto st3
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto st1
		}
		goto st2
tr10:
//line experiment.rl:59

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st3
tr30:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st3
tr41:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line experiment.go:496
		switch data[p] {
		case 32:
			goto tr7
		case 34:
			goto tr7
		case 39:
			goto tr7
		case 47:
			goto tr7
		case 58:
			goto tr9
		case 60:
			goto tr10
		case 62:
			goto tr11
		case 95:
			goto tr8
		case 115:
			goto tr13
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr7
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr12
				}
			case data[p] >= 65:
				goto tr12
			}
		default:
			goto tr8
		}
		goto tr6
tr6:
//line experiment.rl:59

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st4
tr181:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line experiment.go:554
		switch data[p] {
		case 32:
			goto st5
		case 34:
			goto st5
		case 39:
			goto st5
		case 47:
			goto st5
		case 58:
			goto st143
		case 60:
			goto st3
		case 62:
			goto st13
		case 95:
			goto st6
		case 115:
			goto tr20
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st5
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr19
				}
			case data[p] >= 65:
				goto tr19
			}
		default:
			goto st6
		}
		goto st4
tr7:
//line experiment.rl:59

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st5
tr182:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line experiment.go:612
		switch data[p] {
		case 32:
			goto st5
		case 34:
			goto st5
		case 39:
			goto st5
		case 47:
			goto st5
		case 58:
			goto st143
		case 60:
			goto st3
		case 62:
			goto st13
		case 95:
			goto st6
		case 115:
			goto tr22
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st5
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr21
				}
			case data[p] >= 65:
				goto tr21
			}
		default:
			goto st6
		}
		goto st4
tr8:
//line experiment.rl:59

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
//line experiment.go:663
		switch data[p] {
		case 11:
			goto st1
		case 32:
			goto st7
		case 34:
			goto st1
		case 39:
			goto st1
		case 47:
			goto st7
		case 58:
			goto st8
		case 60:
			goto st3
		case 62:
			goto st2
		case 115:
			goto st2
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto st7
		}
		goto st6
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
		switch data[p] {
		case 11:
			goto st1
		case 32:
			goto st7
		case 34:
			goto st1
		case 39:
			goto st1
		case 47:
			goto st7
		case 58:
			goto st8
		case 60:
			goto st3
		case 62:
			goto st2
		case 115:
			goto tr5
		}
		switch {
		case data[p] < 65:
			if 9 <= data[p] && data[p] <= 13 {
				goto st7
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr25
			}
		default:
			goto tr25
		}
		goto st6
tr29:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st8
	st8:
		if p++; p == pe {
			goto _test_eof8
		}
	st_case_8:
//line experiment.go:738
		switch data[p] {
		case 11:
			goto tr28
		case 32:
			goto tr27
		case 34:
			goto tr28
		case 39:
			goto tr28
		case 47:
			goto tr27
		case 58:
			goto tr29
		case 60:
			goto tr30
		case 62:
			goto tr31
		case 95:
			goto st6
		case 115:
			goto tr33
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr27
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr32
				}
			case data[p] >= 65:
				goto tr32
			}
		default:
			goto st6
		}
		goto tr26
tr26:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st9
	st9:
		if p++; p == pe {
			goto _test_eof9
		}
	st_case_9:
//line experiment.go:791
		switch data[p] {
		case 11:
			goto st11
		case 32:
			goto st10
		case 34:
			goto st11
		case 39:
			goto st11
		case 47:
			goto st10
		case 58:
			goto st8
		case 60:
			goto st3
		case 62:
			goto st13
		case 95:
			goto st6
		case 115:
			goto tr20
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st10
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr19
				}
			case data[p] >= 65:
				goto tr19
			}
		default:
			goto st6
		}
		goto st9
tr27:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st10
	st10:
		if p++; p == pe {
			goto _test_eof10
		}
	st_case_10:
//line experiment.go:844
		switch data[p] {
		case 11:
			goto st11
		case 32:
			goto st10
		case 34:
			goto st11
		case 39:
			goto st11
		case 47:
			goto st10
		case 58:
			goto st8
		case 60:
			goto st3
		case 62:
			goto st13
		case 95:
			goto st6
		case 115:
			goto tr22
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st10
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr21
				}
			case data[p] >= 65:
				goto tr21
			}
		default:
			goto st6
		}
		goto st9
tr28:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st11
	st11:
		if p++; p == pe {
			goto _test_eof11
		}
	st_case_11:
//line experiment.go:897
		switch data[p] {
		case 32:
			goto st11
		case 34:
			goto st11
		case 39:
			goto st11
		case 47:
			goto st11
		case 60:
			goto st3
		case 62:
			goto st13
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st11
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr22
				}
			case data[p] >= 65:
				goto tr22
			}
		default:
			goto st2
		}
		goto st12
	st12:
		if p++; p == pe {
			goto _test_eof12
		}
	st_case_12:
		switch data[p] {
		case 32:
			goto st11
		case 34:
			goto st11
		case 39:
			goto st11
		case 47:
			goto st11
		case 60:
			goto st3
		case 62:
			goto st13
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st11
			}
		case data[p] > 57:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr20
				}
			case data[p] >= 65:
				goto tr20
			}
		default:
			goto st2
		}
		goto st12
tr11:
//line experiment.rl:59

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st13
tr31:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
	goto st13
tr39:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
	goto st13
	st13:
		if p++; p == pe {
			goto _test_eof13
		}
	st_case_13:
//line experiment.go:1004
		switch data[p] {
		case 32:
			goto st14
		case 34:
			goto st14
		case 39:
			goto st14
		case 47:
			goto st14
		case 60:
			goto st3
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st14
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr20
				}
			case data[p] >= 65:
				goto tr20
			}
		default:
			goto st2
		}
		goto st13
tr40:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
	goto st14
	st14:
		if p++; p == pe {
			goto _test_eof14
		}
	st_case_14:
//line experiment.go:1056
		switch data[p] {
		case 32:
			goto st14
		case 34:
			goto st14
		case 39:
			goto st14
		case 47:
			goto st14
		case 60:
			goto st3
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st14
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr22
				}
			case data[p] >= 65:
				goto tr22
			}
		default:
			goto st2
		}
		goto st13
tr22:
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
//line experiment.rl:103

            maybeAttr = true
            attrName = ""
            pba = p
        
	goto st15
	st15:
		if p++; p == pe {
			goto _test_eof15
		}
	st_case_15:
//line experiment.go:1108
		switch data[p] {
		case 32:
			goto tr40
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr40
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr43
				}
			case data[p] >= 65:
				goto tr43
			}
		default:
			goto st2
		}
		goto tr39
tr42:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:64

            if !maybeTag {
                maybeTag = false
                tagNameBuilder.Reset()
            }
        
	goto st155
tr47:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:109

            if maybeAttr {
                attrName = string(data[pba:p])
                fmt.Printf("Attr name: %d %d %s \n", pba, p, attrName)
                maybeAttr = false
            }
        
//line experiment.rl:117

            if len(attrName) > 0 && isRiskAttr(attrName) {
                return true
            }
        
	goto st155
tr50:
//line experiment.rl:117

            if len(attrName) > 0 && isRiskAttr(attrName) {
                return true
            }
        
	goto st155
	st155:
		if p++; p == pe {
			goto _test_eof155
		}
	st_case_155:
//line experiment.go:1205
		switch data[p] {
		case 32:
			goto st14
		case 34:
			goto st14
		case 39:
			goto st14
		case 47:
			goto st14
		case 60:
			goto st3
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st14
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr20
				}
			case data[p] >= 65:
				goto tr20
			}
		default:
			goto st2
		}
		goto st13
tr13:
//line experiment.rl:59

            maybeTag = true
            tagNameBuilder.Reset()
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st16
tr20:
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st16
tr33:
//line experiment.rl:71

            maybeTag = true
            tagNameBuilder.Reset()
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st16
tr44:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st16
	st16:
		if p++; p == pe {
			goto _test_eof16
		}
	st_case_16:
//line experiment.go:1297
		switch data[p] {
		case 32:
			goto tr40
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr40
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr44
				}
			case data[p] >= 65:
				goto tr44
			}
		default:
			goto st2
		}
		goto tr39
tr43:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st17
	st17:
		if p++; p == pe {
			goto _test_eof17
		}
	st_case_17:
//line experiment.go:1357
		switch data[p] {
		case 32:
			goto tr40
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr40
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr45
				}
			case data[p] >= 65:
				goto tr45
			}
		default:
			goto st2
		}
		goto tr39
tr45:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st18
	st18:
		if p++; p == pe {
			goto _test_eof18
		}
	st_case_18:
//line experiment.go:1417
		switch data[p] {
		case 32:
			goto tr46
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 61:
			goto tr47
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr46
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr48
				}
			case data[p] >= 65:
				goto tr48
			}
		default:
			goto st2
		}
		goto tr39
tr46:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:109

            if maybeAttr {
                attrName = string(data[pba:p])
                fmt.Printf("Attr name: %d %d %s \n", pba, p, attrName)
                maybeAttr = false
            }
        
	goto st19
	st19:
		if p++; p == pe {
			goto _test_eof19
		}
	st_case_19:
//line experiment.go:1481
		switch data[p] {
		case 32:
			goto st19
		case 34:
			goto st14
		case 39:
			goto st14
		case 47:
			goto st14
		case 60:
			goto st3
		case 61:
			goto tr50
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto st19
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr22
				}
			case data[p] >= 65:
				goto tr22
			}
		default:
			goto st2
		}
		goto st13
tr48:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st20
	st20:
		if p++; p == pe {
			goto _test_eof20
		}
	st_case_20:
//line experiment.go:1541
		switch data[p] {
		case 32:
			goto tr46
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 61:
			goto tr47
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr46
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr51
				}
			case data[p] >= 65:
				goto tr51
			}
		default:
			goto st2
		}
		goto tr39
tr51:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st21
	st21:
		if p++; p == pe {
			goto _test_eof21
		}
	st_case_21:
//line experiment.go:1603
		switch data[p] {
		case 32:
			goto tr46
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 61:
			goto tr47
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr46
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr52
				}
			case data[p] >= 65:
				goto tr52
			}
		default:
			goto st2
		}
		goto tr39
tr52:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st22
	st22:
		if p++; p == pe {
			goto _test_eof22
		}
	st_case_22:
//line experiment.go:1665
		switch data[p] {
		case 32:
			goto tr46
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 61:
			goto tr47
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr46
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr53
				}
			case data[p] >= 65:
				goto tr53
			}
		default:
			goto st2
		}
		goto tr39
tr53:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st23
	st23:
		if p++; p == pe {
			goto _test_eof23
		}
	st_case_23:
//line experiment.go:1727
		switch data[p] {
		case 32:
			goto tr46
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 61:
			goto tr47
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr46
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr54
				}
			case data[p] >= 65:
				goto tr54
			}
		default:
			goto st2
		}
		goto tr39
tr54:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53

            if maybeTag {
                pbt = p
            }
        
	goto st24
	st24:
		if p++; p == pe {
			goto _test_eof24
		}
	st_case_24:
//line experiment.go:1789
		switch data[p] {
		case 32:
			goto tr46
		case 34:
			goto tr40
		case 39:
			goto tr40
		case 47:
			goto tr40
		case 60:
			goto tr41
		case 61:
			goto tr47
		case 62:
			goto tr42
		case 95:
			goto st2
		}
		switch {
		case data[p] < 48:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr46
			}
		case data[p] > 58:
			switch {
			case data[p] > 90:
				if 97 <= data[p] && data[p] <= 122 {
					goto tr55
				}
			case data[p] >= 65:
				goto tr55
			}
		default:
			goto st2
		}
		goto tr39
tr55:
//line experiment.rl:76

            if maybeTag {
                tagNameBuilder.WriteString(string(data[pbt:p]))
                tagName = tagNameBuilder.String()

                if slices.Contains(riskTags, tagName) {
                    fmt.Println("Matched")
                    return true
                }
            }
        
//line experiment.rl:53
